Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22574

Could QtCreator not re-parse every time the compile_commands file changes

    XMLWordPrintable

Details

    • 61bb28cdc07b4f488585ea23476e3b074df77fb3 (qt-creator/qt-creator/master)

    Description

      My projects build system is setup to generate compile_commands.json every time the we build the project in debug.

      This however means that Qt Creator re-parses and re-scans the project every time the file changes. If done enough Qt Creator can end up crashing. However, this is not as big a problem as not being able to run/debug while Qt Creator is parsing.

      Could it be changed so that we can disable parsing or so that we can run/debug while parsing is occurring.

      Thanks

      Arron

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            ataylor Arron Taylor
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes